# corium

./: .gitignore  Cargo.toml  PLAN.md  README.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  publish-site.yml  publish.yml
crates/corium-authz/: Cargo.toml
crates/corium-authz/src/: audit.rs  authorizer.rs  bootstrap.rs  eval.rs  lib.rs  model.rs  policy.rs  schema.rs  source.rs  subject.rs  view.rs
crates/corium-authz/tests/: rebac.rs
crates/corium-cli/: Cargo.toml  README.md
crates/corium-cli/src/: authz.rs  console.rs  main.rs  metrics_http.rs  pg_catalog.rs  sql.rs
crates/corium-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/corium-cli/tests/: conformance_grpc.rs  distribution.rs  ha.rs  rebac_authz.rs
crates/corium-client/: Cargo.toml  README.md
crates/corium-client/src/: lib.rs  local.rs  pull.rs  query.rs  remote.rs  result.rs  tx.rs  value.rs
crates/corium-client/tests/: end_to_end.rs
crates/corium-cljrs/: Cargo.toml  README.md
crates/corium-cljrs/src/: api.rs  convert.rs  dbfn.rs  lib.rs  query.rs  sandbox.rs
crates/corium-cljrs/tests/: api_cljrs.rs  conformance_cljrs.rs  convert.rs  dbfn.rs  queryfns.rs  sandbox.rs
crates/corium-core/: Cargo.toml  README.md
crates/corium-core/src/: datom.rs  encoding.rs  ids.rs  keyword.rs  lib.rs  schema.rs  value.rs
crates/corium-core/tests/: encoding_props.rs
crates/corium-db/: Cargo.toml  README.md
crates/corium-db/src/: lib.rs
crates/corium-db/tests/: scaling_probe.rs
crates/corium-forms/: Cargo.toml
crates/corium-forms/src/: lib.rs
crates/corium-index/: Cargo.toml  README.md
crates/corium-index/src/: lib.rs
crates/corium-log/: Cargo.toml  README.md
crates/corium-log/src/: lib.rs
crates/corium-log/tests/: log.rs
crates/corium-peer/: Cargo.toml  README.md
crates/corium-peer/src/: authz.rs  lib.rs  metrics.rs  segment.rs  server.rs
crates/corium-pgwire/: Cargo.toml  README.md
crates/corium-pgwire/src/: lib.rs  protocol.rs  types.rs
crates/corium-pgwire/tests/: wire.rs
crates/corium-protocol/: Cargo.toml  README.md  build.rs
crates/corium-protocol/proto/: corium.proto
crates/corium-protocol/src/: auth.rs  authz.rs  codec.rs  lib.rs  oidc.rs  schemaform.rs  txforms.rs
crates/corium-protocol/tests/: codec.rs
crates/corium-query/: Cargo.toml  README.md
crates/corium-query/benches/: query.rs
crates/corium-query/src/: aggregate.rs  ast.rs  boundary.rs  builtins.rs  cache.rs  edn.rs  entity.rs  exec.rs  lib.rs  plan.rs  pull.rs
crates/corium-query/tests/: conformance.rs  differential.rs  engine.rs  planner.rs
crates/corium-sim/: Cargo.toml  README.md
crates/corium-sim/src/: lib.rs
crates/corium-sql/: Cargo.toml  README.md
crates/corium-sql/src/: catalog.rs  lib.rs  value.rs
crates/corium-store/: Cargo.toml  README.md
crates/corium-store/src/: lib.rs  postgres_store.rs  s3_store.rs  snapshot.rs  turso_store.rs
crates/corium-store/tests/: postgres.rs  s3.rs  store.rs  turso.rs
crates/corium-transactor/: Cargo.toml  README.md
crates/corium-transactor/examples/: tx_throughput.rs
crates/corium-transactor/src/: authz.rs  backend.rs  backup.rs  lease.rs  lib.rs  metrics.rs  node.rs  server.rs  txfn.rs
crates/corium-transactor/tests/: backend.rs  backup.rs  conformance.rs  embedded.rs  fork.rs  group_commit.rs  ha_sim.rs  index_control.rs  recovery.rs  txfn.rs
crates/corium-tx/: Cargo.toml  README.md
crates/corium-tx/src/: lib.rs
crates/corium-tx/tests/: transactions.rs
crates/corium-wasm/: Cargo.toml  README.md
crates/corium-wasm/assets/: gen_releases_1997.py  releases-1997.edn  schema.edn
crates/corium-wasm/src/: engine.rs  lib.rs
crates/corium-wasm/web/: .gitignore  index.html
docs/: architecture.md  getting-started.md  operations.md  roadmap.md  sql.md  thin-client-protocol.md
docs/adr/: 0001-datomic-topology.md  0002-clojurust-boundary.md  0003-immutable-segments.md  0004-peer-query.md  0005-full-time-model.md  0006-grpc-protocol.md  0007-initial-backends.md  0008-sandboxed-db-functions.md  0009-schema-scope.md  0010-ha-later.md  0011-sql-interface.md  0012-optional-authn-authz.md  0013-postgres-wire-interface.md  0014-self-hosted-rebac-authz.md  README.md
docs/benchmarks/: m3-baseline.md  tx-throughput.md
docs/demo/: m6-console.txt
docs/design/: auth.md  backup-format.md  clients-and-ops.md  clojurust-integration.md  data-model.md  indexes-and-storage.md  log-and-transactor.md  peer-segment-cache.md  protocol.md  query-engine.md  testing-strategy.md  time-model.md  transactor-fleet.md  write-path-scaling.md
examples/musicbrainz/: Cargo.toml  README.md
examples/musicbrainz/data/: sample.edn
examples/musicbrainz/scripts/: console.sh  demo.sh  load.sh  repl.sh  transactor.sh
examples/musicbrainz/src/: lib.rs
examples/postgres-jdbc/: README.md  pom.xml  run.sh
examples/postgres-jdbc/src/main/java/io/corium/examples/: MusicBrainzJdbcExample.java
tests/conformance/: README.md  aggregates.edn  edge-cases.edn  find-specs.edn  functions.edn  inputs.edn  multi-db.edn  not-or.edn  patterns.edn  predicates.edn  pull.edn  rules.edn  time-model.edn  tx-semantics.edn
web/: .gitignore  index.html  mbrainz.html  style.css  theme.js
