[workspace]
members = [
    "crates/corium-core",
    "crates/corium-index",
    "crates/corium-store",
    "crates/corium-log",
    "crates/corium-tx",
    "crates/corium-query",
    "crates/corium-db",
    "crates/corium-transactor",
    "crates/corium-peer",
    "crates/corium-protocol",
    "crates/corium-cljrs",
    "crates/corium-cli",
    "crates/corium-sim",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.3"
license = "Apache-2.0 OR MIT"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
corium-cli = { path = "crates/corium-cli", version = "0.1.3" }
corium-cljrs = { path = "crates/corium-cljrs", version = "0.1.3" }
corium-core = { path = "crates/corium-core", version = "0.1.3" }
corium-db = { path = "crates/corium-db", version = "0.1.3" }
corium-index = { path = "crates/corium-index", version = "0.1.3" }
corium-log = { path = "crates/corium-log", version = "0.1.3" }
corium-peer = { path = "crates/corium-peer", version = "0.1.3" }
corium-protocol = { path = "crates/corium-protocol", version = "0.1.3" }
corium-query = { path = "crates/corium-query", version = "0.1.3" }
corium-sim = { path = "crates/corium-sim", version = "0.1.3" }
corium-store = { path = "crates/corium-store", version = "0.1.3" }
corium-transactor = { path = "crates/corium-transactor", version = "0.1.3" }
corium-tx = { path = "crates/corium-tx", version = "0.1.3" }

cljrs-builtins = "0.1.225"
cljrs-env = "0.1.225"
cljrs-gc = "0.1.225"
cljrs-interop = "0.1.225"
cljrs-interp = "0.1.225"
cljrs-reader = "0.1.225"
cljrs-value = "0.1.225"
