[workspace]
members = [
    "crates/corium-core",
    "crates/corium-index",
    "crates/corium-store",
    "crates/corium-log",
    "crates/corium-tx",
    "crates/corium-forms",
    "crates/corium-query",
    "crates/corium-sql",
    "crates/corium-pgwire",
    "crates/corium-db",
    "crates/corium-client",
    "crates/corium-transactor",
    "crates/corium-peer",
    "crates/corium-protocol",
    "crates/corium-cljrs",
    "crates/corium-cli",
    "crates/corium-sim",
    "crates/corium-wasm",
    "examples/musicbrainz",
]
# `corium-cljrs` (the GC-mode Clojure client API) and the musicbrainz example
# (whose REPL embeds that client env) are excluded from default builds:
# building them alongside the `cljrs`-featured transactor would feature-unify
# the cljrs stack into `no-gc` mode and silently degrade their GC semantics.
# Build and test them standalone (`cargo test -p corium-cljrs`, `-p
# corium-mbrainz`), where they keep GC mode; `--workspace` builds still unify.
default-members = [
    "crates/corium-core",
    "crates/corium-index",
    "crates/corium-store",
    "crates/corium-log",
    "crates/corium-tx",
    "crates/corium-forms",
    "crates/corium-query",
    "crates/corium-sql",
    "crates/corium-pgwire",
    "crates/corium-db",
    "crates/corium-transactor",
    "crates/corium-peer",
    "crates/corium-protocol",
    "crates/corium-cli",
    "crates/corium-sim",
    "crates/corium-wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.36"
license = "Apache-2.0 OR MIT"
rust-version = "1.88"
homepage = "https://github.com/csm/corium"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
corium-cli = { path = "crates/corium-cli", version = "0.1.36" }
corium-client = { path = "crates/corium-client", version = "0.1.36" }
corium-cljrs = { path = "crates/corium-cljrs", version = "0.1.36" }
corium-core = { path = "crates/corium-core", version = "0.1.36" }
corium-db = { path = "crates/corium-db", version = "0.1.36" }
corium-forms = { path = "crates/corium-forms", version = "0.1.36" }
corium-index = { path = "crates/corium-index", version = "0.1.36" }
corium-log = { path = "crates/corium-log", version = "0.1.36" }
corium-peer = { path = "crates/corium-peer", version = "0.1.36" }
corium-pgwire = { path = "crates/corium-pgwire", version = "0.1.36" }
corium-protocol = { path = "crates/corium-protocol", version = "0.1.36" }
corium-query = { path = "crates/corium-query", version = "0.1.36" }
corium-sql = { path = "crates/corium-sql", version = "0.1.36" }
corium-sim = { path = "crates/corium-sim", version = "0.1.36" }
corium-store = { path = "crates/corium-store", version = "0.1.36" }
# default-features off so `corium-cljrs` (GC-mode cljrs) does not inherit the
# `cljrs` transaction-function runtime, whose `no-gc` flag would feature-unify
# onto its cljrs stack; binaries opt in via their own `cljrs` feature.
corium-transactor = { path = "crates/corium-transactor", version = "0.1.36", default-features = false }
corium-tx = { path = "crates/corium-tx", version = "0.1.36" }

ratatui = "0.29"
rpds = "1.2"

cljrs-builtins = "0.1.228"
cljrs-env = "0.1.228"
cljrs-gc = "0.1.228"
cljrs-interop = "0.1.228"
cljrs-interp = "0.1.228"
cljrs-reader = "0.1.228"
cljrs-tx = "0.1.228"
cljrs-value = "0.1.228"
