[package]
name = "corium-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Corium CLI"

[[bin]]
name = "corium"
path = "src/main.rs"

[features]
default = []
# Enables the PostgreSQL storage backend for `corium transactor --store postgres`.
postgres = ["corium-transactor/postgres"]
# Enables the Turso storage backend for `corium transactor --store turso`.
turso = ["corium-transactor/turso"]

[dependencies]
clap = { version = "4", features = ["derive"] }
corium-cljrs = { workspace = true }
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-log = { workspace = true }
corium-peer = { workspace = true }
corium-protocol = { workspace = true }
corium-query = { workspace = true }
corium-sql = { workspace = true }
corium-store = { workspace = true }
corium-transactor = { workspace = true }
ratatui = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustyline = "15"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }
tonic = { version = "0.14.5", features = ["tls-ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
proptest = "1"
rcgen = "0.13"
tempfile = "3"
tokio-stream = "0.1.18"

[lints]
workspace = true
