[package]
name = "corium-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Corium CLI"

[[bin]]
name = "corium"
path = "src/main.rs"

[features]
default = ["cljrs"]
# Built-in Clojure transaction-function runtime for `corium transactor`
# (`:db/fn` expansion on the bounded `cljrs-tx` interpreter).
cljrs = ["corium-transactor/cljrs"]
# Enables the PostgreSQL storage backend for `corium transactor --store postgres`.
postgres = ["corium-transactor/postgres"]
# Enables the Turso storage backend for `corium transactor --store turso`.
turso = ["corium-transactor/turso"]
# Enables the S3 storage backend for `corium transactor --store s3`.
s3 = ["corium-transactor/s3"]
# OIDC/JWT bearer-token authentication for the transactor and peer server.
# `oidc` verifies tokens against a JWKS supplied with `--oidc-jwks-file`;
# `oidc-discovery` also fetches the issuer's JWKS over HTTP (`--oidc-issuer`).
oidc = ["corium-protocol/oidc"]
oidc-discovery = ["oidc", "corium-protocol/oidc-discovery"]

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
corium-authz = { workspace = true }
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-log = { workspace = true }
corium-peer = { workspace = true }
corium-pgwire = { workspace = true }
corium-protocol = { workspace = true }
corium-query = { workspace = true }
corium-sql = { workspace = true }
corium-store = { workspace = true }
corium-transactor = { workspace = true }
ratatui = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustyline = "15"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }
tonic = { version = "0.14.5", features = ["tls-ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
proptest = "1"
rcgen = "0.13"
tempfile = "3"
tokio-stream = "0.1.18"

[lints]
workspace = true
