[package]
name = "corium-client"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Fluent async Datomic-style client for corium peers and peer servers"

[dependencies]
async-trait = "0.1"
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-peer = { workspace = true }
corium-protocol = { workspace = true }
corium-query = { workspace = true }
thiserror = "2"
tokio = { version = "1.53.0", features = ["sync"] }
tonic = { version = "0.14.5", features = ["tls-ring"] }

[dev-dependencies]
corium-transactor = { workspace = true }
tempfile = "3"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
