[package]
name = "corium-cljrs"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-peer = { workspace = true }
corium-query = { workspace = true }
corium-transactor = { workspace = true }
cljrs-builtins = { workspace = true }
cljrs-env = { workspace = true }
cljrs-gc = { workspace = true }
cljrs-interop = { workspace = true }
cljrs-interp = { workspace = true }
cljrs-reader = { workspace = true }
cljrs-value = { workspace = true }
thiserror = "2"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "sync", "time"] }

[dev-dependencies]
corium-log = { path = "../corium-log" }
corium-protocol = { path = "../corium-protocol" }
corium-store = { path = "../corium-store" }
corium-tx = { path = "../corium-tx" }
tempfile = "3"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
