[package]
name = "corium-log"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Durable append-only transaction logs with replay and range scans"

[dependencies]
corium-core = { workspace = true }
thiserror = "2"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
