[package]
name = "corium-peer"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
corium-core = { path = "../corium-core" }
corium-db = { path = "../corium-db" }
corium-log = { path = "../corium-log" }
corium-protocol = { path = "../corium-protocol" }
corium-query = { path = "../corium-query" }
corium-store = { path = "../corium-store" }
thiserror = "2"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.5", features = ["tls-ring"] }

[lints]
workspace = true
