[package]
name = "corium-peer"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Corium peer library"

[dependencies]
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-log = { workspace = true }
corium-protocol = { workspace = true }
corium-query = { workspace = true }
corium-store = { workspace = true }
thiserror = "2"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.5", features = ["tls-ring"] }

[lints]
workspace = true
