[package]
name = "corium-protocol"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-log = { workspace = true }
corium-query = { workspace = true }
corium-tx = { workspace = true }
prost = "0.14.4"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.5", features = ["tls-ring"] }
tonic-prost = "0.14.5"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true

[build-dependencies]
protox = "0.9.1"
tonic-prost-build = "0.14.5"
