[package]
name = "corium-protocol"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Corium gRPC network protocol"

[dependencies]
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-forms = { workspace = true }
corium-log = { workspace = true }
corium-query = { workspace = true }
corium-tx = { workspace = true }
prost = "0.14.4"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.5", features = ["tls-ring"] }
tonic-prost = "0.14.5"

# OIDC/JWT bearer-token verification (feature `oidc`). Kept optional so the
# default build stays free of the crypto/HTTP stack; `oidc-discovery` adds the
# HTTP client used to fetch a live issuer's JWKS.
base64 = { version = "0.22.1", optional = true }
ring = { version = "0.17.14", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.150", optional = true }
reqwest = { version = "0.13.4", optional = true, default-features = false, features = [
    "rustls",
    "http2",
    "json",
] }

[features]
oidc = ["dep:base64", "dep:ring", "dep:serde", "dep:serde_json"]
oidc-discovery = ["oidc", "dep:reqwest"]

[dev-dependencies]
proptest = "1"

[lints]
workspace = true

[build-dependencies]
protox = "0.9.1"
tonic-prost-build = "0.14.5"
