[package]
name = "corium-query"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Corium query implementation"

[dependencies]
corium-core = { workspace = true }
corium-db = { workspace = true }
thiserror = "2"

[dev-dependencies]
corium-log = { workspace = true }
corium-transactor = { workspace = true }
corium-tx = { workspace = true }
criterion = "0.5"
proptest = "1"

[[bench]]
name = "query"
harness = false

[lints]
workspace = true
