[package]
name = "corium-store"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Corium content-addressable blob store"

[dependencies]
blake3 = "1"
corium-core = { workspace = true }
fs2 = "0.4"
thiserror = "2"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
