[package]
name = "corium-store"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Corium content-addressable blob store"

[dependencies]
async-trait = "0.1"
blake3 = "1"
corium-core = { workspace = true }
fs2 = "0.4"
thiserror = "2"
tokio = { version = "1.53.0", features = ["rt", "sync"] }
tokio-stream = "0.1.18"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }
