[package]
name = "corium-store"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Corium content-addressable blob store"

[features]
default = []
postgres = [
    "dep:deadpool-postgres",
    "dep:rustls",
    "dep:tokio-postgres-rustls",
]
turso = ["dep:turso"]
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
async-trait = "0.1"
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
blake3 = "1"
corium-core = { workspace = true }
deadpool-postgres = { version = "0.14.1", optional = true }
fs2 = "0.4"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
thiserror = "2"
tokio = { version = "1.53.0", features = ["rt", "sync"] }
tokio-stream = "0.1.18"
tokio-postgres-rustls = { version = "0.14.0", optional = true, features = ["native-certs", "ring"] }
turso = { version = "0.7.0", optional = true, default-features = false }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }
