[package]
name = "corium-transactor"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-index = { workspace = true }
corium-log = { workspace = true }
corium-protocol = { workspace = true }
corium-query = { workspace = true }
corium-store = { workspace = true }
corium-tx = { workspace = true }
thiserror = "2"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.18"
tonic = "0.14.5"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
