[package]
name = "corium-transactor"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Corium transactor"

[features]
default = ["cljrs"]
# Built-in Clojure transaction-function runtime (`:db/fn`) on the bounded,
# GC-less `cljrs-tx` interpreter. Enables the cljrs stack's global `no-gc`
# mode, which feature-unifies onto every cljrs crate in the same build.
cljrs = ["dep:cljrs-tx", "dep:cljrs-value"]
postgres = ["corium-store/postgres"]
turso = ["corium-store/turso"]
s3 = ["corium-store/s3"]

[dependencies]
cljrs-tx = { workspace = true, features = ["no-gc"], optional = true }
cljrs-value = { workspace = true, optional = true }
corium-authz = { workspace = true }
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-index = { workspace = true }
corium-log = { workspace = true }
corium-protocol = { workspace = true }
corium-query = { workspace = true }
corium-store = { workspace = true }
corium-tx = { workspace = true }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.18"
tonic = "0.14.5"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
