[package]
name = "corium-tx"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Corium transaction expansion, entity resolution, and validation"

[dependencies]
corium-core = { workspace = true }
corium-db = { workspace = true }
thiserror = "2"

[lints]
workspace = true
