[package]
name = "corium-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "WebAssembly bindings: an ephemeral, in-memory corium engine for the browser"
publish = false

[lib]
# `cdylib` for the wasm artifact; `rlib` so the pure `engine` module can be
# unit-tested on the host toolchain.
crate-type = ["cdylib", "rlib"]

[dependencies]
corium-core = { workspace = true }
corium-db = { workspace = true }
corium-forms = { workspace = true }
corium-query = { workspace = true }
corium-tx = { workspace = true }
wasm-bindgen = "0.2"

# NOTE: this crate deliberately does NOT inherit `[workspace.lints]`. The
# workspace sets `unsafe_code = "forbid"`, which cannot be relaxed downstream,
# and wasm-bindgen's generated glue contains `unsafe` blocks. The pure engine
# code below contains no unsafe of its own.
[lints.clippy]
all = "warn"
pedantic = "warn"
