[package]
name = "corium-mbrainz"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "MusicBrainz example for corium: schema/data loader and a Clojurust query REPL"
publish = false

[features]
default = []
postgres = ["corium-store/postgres"]
turso = ["corium-store/turso"]

[[bin]]
name = "mbrainz-load"
path = "src/bin/load.rs"

[[bin]]
name = "mbrainz-repl"
path = "src/bin/repl.rs"

[[bin]]
name = "mbrainz-import-json"
path = "src/bin/import_json.rs"

[dependencies]
corium-cljrs = { workspace = true }
corium-peer = { workspace = true }
corium-protocol = { workspace = true }
corium-query = { workspace = true }
corium-store = { workspace = true }
cljrs-env = { workspace = true }
cljrs-gc = { workspace = true }
cljrs-interp = { workspace = true }
cljrs-reader = { workspace = true }
cljrs-value = { workspace = true }
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustyline = "15"
serde_json = "1"
tar = { version = "0.4", default-features = false }
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }
xz2 = "0.1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
